# OpenNGP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test_debug.py
docs/: exp_notes.md
ongp/: CMakeLists.txt
ongp/app/: main.cc  main.cpp
ongp/base/: aabb.cc  aabb.h  box.cc  box.h  bvh.cc  bvh.h  camera.cc  camera.h  constant_medium.cc  constant_medium.h  frame.cc  frame.h  image.cc  image.h  json.cc  json.h  macros.h  object.cc  object.h  pose.cc  pose.h  ray.cc  ray.h  rect_aa.cc  rect_aa.h  scene.cc  scene.h  sphere.cc  sphere.h  tensor.h
ongp/dataset/: data_loader.cc  data_loader.h  dataset.cc  dataset.h  frame_data.cc  frame_data.h  frame_dataset.cc  frame_dataset.h  image_data.cc  image_data.h  ray_dataset.cc  ray_dataset.h
ongp/primitive/: base_nerf.h  primitive.h
ongp/primitive/component/: geometry.h
ongp/primitive/component/appearance/: color.h
ongp/primitive/component/geometry/: sigma.h
ongp/primitive/component/module/regressor/: mlp.h
ongp/primitive/module/encoder/: frequency.h
ongp/renderer/: dielectric.h  diffuse_light.h  dynamic_invoker.h  integrator.h  isotropic.h  lambertian.h  material.h  metal.h  ray_marcher.cc  ray_marcher.h  render_defs.h  render_diffuse.h  render_normal.h  renderer.h  renderpass.cc  renderpass.h  texture.h
ongp/trainer/: nerf.cc  nerf.h  trainer.cc  trainer.h
python_api/app/: calc_depth_consistency.py  config.py  engine.py  eval_nerf_engine.py  fit_nerf.py  fit_nerf_engine.py  fit_nerf_w_fine.py  fit_neus_engine.py  fit_ngp.py  fit_pose_engine.py  gen_synthetic_dataset.py  vis_dataset_coverage.py  write_video.py
python_api/metrics/: __init__.py  composite_loss.py  depth_loss.py  interval_dist_loss.py  loss_factory.py  pixel_loss.py  sparsity_loss.py
python_api/primitive/: __init__.py  base_nerf.py  base_nerf_sh.py  instant_ngp.py  instant_ngp_mock.py  neus.py  plenoxel.py  primitive.py
python_api/provider/: __init__.py  data_parameter.py  data_transformer.py  data_utils.py  dataset.py  dataset_ngp.py  rotation_utils.py  scannet_utils.py
python_api/renderer/: integrator.py  raymarcher.py  rays.py  raysampler.py  renderer.py  renderpass.py  sampler.py
python_api/renderer/raymarching/: __init__.py  backend.py  raymarching.py
python_api/test/: base_nerf_arch.py
python_api/utils/: __init__.py  class_factory.py  data_helper.py  function_registry.py  trainer.py
test/: exp_lego.gin  exp_lego_nerf.gin  test.gin  test_engine.gin  test_engine_202204132149.gin  test_engine_depth.gin  test_lego.gin  test_lego_w_fine.gin  test_neus_engine.gin  test_neus_engine_new.gin
test/cpp/: CMakeLists.txt  backward.cc  test_camera.cc  test_data_loader.cc  test_ray_tracing.cc  test_tensor.cc
(+20 files in other folders)
